# Raster

./: CMakeLists.txt  README.md
shaders/: frag.glsl  vert.glsl
src/: glad.c  glad.h  raster_filesystem.c  raster_filesystem.h  raster_input.c  raster_input.h  raster_log.c  raster_log.h  raster_main.c  raster_render.c  raster_render.h  raster_types.h  raster_window.c  raster_window.h
